--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 </div>
 <pre class="p-6 text-base font-body whitespace-pre-wrap"><code class="text-primary">&gt; <span class="text-white">git clone https://github.com/user/need-for-speed-g25.git</span>
 <span class="text-primary">&gt; </span><span class="text-white">cd need-for-speed-g25</span>
-<span class="text-primary">&gt; </span><span class="text-white">./build.sh</span></code></pre>
+<span class="text-primary">&gt; </span><span class="text-white">./installer.sh</span></code></pre>
+<span class="text-primary">&gt; </span><span class="text-white">make exec</span></code></pre>
 </div>
 </div>
 <footer class="mt-12 mb-6 px-4">
