--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 <img alt="Pixel art of a red car driving down a city street at night" class="w-full h-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCw5Uo7qWHQ4uPZNiDyRfo1Yk5MWc4N0DtycVtvHgkJyNvENXVRwydjyInaSeUQ6WY3lAg2KfY0bDZI2rMAWhPl64SNh9RvmjgIUpNnR4gfdg-To8jrk9QPXDjH-FRkn8lNhFhw018KxYIn1NOeejnoP-ZLwUevl52HYT2DYdlpaMweS3Ucy3KZOn7jqSkvgRApqfeAyHgwDMT-rPaHhN1IQM_vpHTPFTljZzuNqIhn-nQM3_ZiblsV0hN16SucbIFdIQgp6JLj-x0"/>
 </div>
 </div>
-<button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden h-14 px-8 bg-primary text-background-dark text-lg font-bold leading-normal tracking-widest border-4 border-primary hover:bg-background-dark hover:text-primary transition-colors">
-<span class="truncate">DOWNLOAD ZIP</span>
-</button>
+<a href="https://github.com/juli-rivero/need-for-speed-g25/archive/refs/heads/main.zip" download 
+   class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden h-14 px-8 bg-primary text-background-dark text-lg font-bold leading-normal tracking-widest border-4 border-primary hover:bg-background-dark hover:text-primary transition-colors text-decoration-none">
+    <span class="truncate">DOWNLOAD ZIP</span>
+</a>
 </div>
 <div class="flex flex-col gap-10 px-4 py-10 @container">
 <div class="flex flex-col gap-4 text-center items-center">
@@ -103,9 +104,10 @@
 <div class="flex flex-col sm:flex-row justify-between items-center gap-4 py-4 border-t-2 border-gray-700">
 <p class="text-sm text-gray-400 font-body">The Team: Group 25</p>
 <div class="flex gap-4">
-<a class="text-sm text-gray-400 hover:text-primary transition-colors font-body" href="#">Creator 1</a>
-<a class="text-sm text-gray-400 hover:text-primary transition-colors font-body" href="#">Creator 2</a>
-<a class="text-sm text-gray-400 hover:text-primary transition-colors font-body" href="#">Creator 3</a>
+<a class="text-sm text-gray-400 hover:text-primary transition-colors font-body" href="#">Julian Rivero</a>
+<a class="text-sm text-gray-400 hover:text-primary transition-colors font-body" href="#">Nicolas Mazzeo</a>
+<a class="text-sm text-gray-400 hover:text-primary transition-colors font-body" href="#">Elvis Quispe</a>
+<a class="text-sm text-gray-400 hover:text-primary transition-colors font-body" href="#">Franco Lucchesi</a>
 </div>
 </div>
 </footer>
