--- a/index.html
+++ b/index.html
@@ -55,11 +55,18 @@
 <div class="w-full bg-black aspect-video">
 <img alt="Pixel art of a red car driving down a city street at night" class="w-full h-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCw5Uo7qWHQ4uPZNiDyRfo1Yk5MWc4N0DtycVtvHgkJyNvENXVRwydjyInaSeUQ6WY3lAg2KfY0bDZI2rMAWhPl64SNh9RvmjgIUpNnR4gfdg-To8jrk9QPXDjH-FRkn8lNhFhw018KxYIn1NOeejnoP-ZLwUevl52HYT2DYdlpaMweS3Ucy3KZOn7jqSkvgRApqfeAyHgwDMT-rPaHhN1IQM_vpHTPFTljZzuNqIhn-nQM3_ZiblsV0hN16SucbIFdIQgp6JLj-x0"/>
 </div>
-</div>
-<a href="https://github.com/juli-rivero/need-for-speed-g25/archive/refs/heads/main.zip" download 
-   class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden h-14 px-8 bg-primary text-background-dark text-lg font-bold leading-normal tracking-widest border-4 border-primary hover:bg-background-dark hover:text-primary transition-colors text-decoration-none">
-    <span class="truncate">DOWNLOAD ZIP</span>
-</a>
+<div class="flex flex-wrap justify-center gap-4 mt-8">
+    
+    <a href="https://github.com/juli-rivero/need-for-speed-g25/archive/refs/heads/main.zip" download 
+       class="flex min-w-[200px] cursor-pointer items-center justify-center overflow-hidden h-14 px-8 bg-primary text-background-dark text-lg font-bold leading-normal tracking-widest border-4 border-primary hover:bg-white hover:border-white hover:text-black transition-colors text-decoration-none">
+        <span class="truncate">DOWNLOAD ZIP</span>
+    </a>
+
+    <a href="https://github.com/juli-rivero/need-for-speed-g25" target="_blank"
+       class="flex min-w-[200px] cursor-pointer items-center justify-center overflow-hidden h-14 px-8 bg-transparent text-primary text-lg font-bold leading-normal tracking-widest border-4 border-primary hover:bg-primary hover:text-background-dark transition-colors text-decoration-none">
+        <span class="truncate">GITHUB REPO</span>
+    </a>
+
 </div>
 <div class="flex flex-col gap-10 px-4 py-10 @container">
 <div class="flex flex-col gap-4 text-center items-center">
