Arreglo de lo visual

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 <div class="w-full bg-black aspect-video">
 <img alt="Pixel art of a red car driving down a city street at night" class="w-full h-full object-cover" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCw5Uo7qWHQ4uPZNiDyRfo1Yk5MWc4N0DtycVtvHgkJyNvENXVRwydjyInaSeUQ6WY3lAg2KfY0bDZI2rMAWhPl64SNh9RvmjgIUpNnR4gfdg-To8jrk9QPXDjH-FRkn8lNhFhw018KxYIn1NOeejnoP-ZLwUevl52HYT2DYdlpaMweS3Ucy3KZOn7jqSkvgRApqfeAyHgwDMT-rPaHhN1IQM_vpHTPFTljZzuNqIhn-nQM3_ZiblsV0hN16SucbIFdIQgp6JLj-x0"/>
 </div>
+</div>
+
 <div class="flex flex-wrap justify-center gap-4 mt-8">
     
     <a href="https://github.com/juli-rivero/need-for-speed-g25/archive/refs/heads/main.zip" download 
@@ -67,6 +69,7 @@
         <span class="truncate">GITHUB REPO</span>
     </a>
 
+</div>
 </div>
 <div class="flex flex-col gap-10 px-4 py-10 @container">
 <div class="flex flex-col gap-4 text-center items-center">
