--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
    class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden h-14 px-8 bg-primary text-background-dark text-lg font-bold leading-normal tracking-widest border-4 border-primary hover:bg-background-dark hover:text-primary transition-colors text-decoration-none">
     <span class="truncate">DOWNLOAD ZIP</span>
 </a><div class="flex flex-wrap justify-center gap-4 mt-8">
-<a href="https://github.com/juli-rivero/need-for-speed-g25" target="_blank"
+<a href="https://github.com/juli-rivero/need-for-speed-g25"
      class="flex min-w-[200px] cursor-pointer items-center justify-center overflow-hidden h-14 px-8 bg-transparent text-primary text-lg font-bold leading-normal tracking-widest border-4 border-primary hover:bg-primary hover:text-background-dark transition-colors text-decoration-none">
       <span class="truncate">GITHUB REPO</span>
 </a>
