Mejora visual del front para que este todo alineado

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 <a href="https://github.com/juli-rivero/need-for-speed-g25/archive/refs/heads/main.zip" download 
    class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden h-14 px-8 bg-primary text-background-dark text-lg font-bold leading-normal tracking-widest border-4 border-primary hover:bg-background-dark hover:text-primary transition-colors text-decoration-none">
     <span class="truncate">DOWNLOAD ZIP</span>
-</a><div class="flex flex-wrap justify-center gap-4 mt-8">
-<a href="https://github.com/juli-rivero/need-for-speed-g25" target="_blank"
-     class="flex min-w-[200px] cursor-pointer items-center justify-center overflow-hidden h-14 px-8 bg-transparent text-primary text-lg font-bold leading-normal tracking-widest border-4 border-primary hover:bg-primary hover:text-background-dark transition-colors text-decoration-none">
-      <span class="truncate">GITHUB REPO</span>
+</a>
+<a href="https://github.com/juli-rivero/need-for-speed-g25" target="_blank "
+   class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden h-14 px-8 bg-primary text-background-dark text-lg font-bold leading-normal tracking-widest border-4 border-primary hover:bg-background-dark hover:text-primary transition-colors text-decoration-none">
+   <span class="truncate">GITHUB REPO</span>
 </a>
 </div>
 <div class="flex flex-col gap-10 px-4 py-10 @container">
@@ -111,7 +111,7 @@
 <a class="text-sm text-gray-400 hover:text-primary transition-colors font-body" href="#">Julian Rivero</a>
 <a class="text-sm text-gray-400 hover:text-primary transition-colors font-body" href="#">Nicolas Mazzeo</a>
 <a class="text-sm text-gray-400 hover:text-primary transition-colors font-body" href="#">Elvis Quispe</a>
-<a class="text-sm text-gray-400 hover:text-primary transition-colors font-body" href="#">Franco Lucchesi</a>
+<a class="text-sm text-gray-400 hover:text-primary transition-colors font-body" href="#">Elvis Quispe</a>
 </div>
 </div>
 </footer>
