Integracion con Youtube

--- a/index.html
+++ b/index.html
@@ -54,14 +54,19 @@
 <div class="w-[95%] border-4 border-gray-600 bg-black relative shadow-[0_0_20px_rgba(0,0,0,0.5)]">
     <div class="w-full relative">
         
-        <video class="w-full h-auto block object-cover" autoplay loop muted playsinline>
-            <source src="gameplay.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+        <iframe 
+            class="w-full h-[400px] block"
+            src="https://www.youtube.com/embed/LWmeZo8ykAo"
+            title="Demo"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
 
         <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent pointer-events-none"></div>
     </div>
 </div>
+
 <a href="https://github.com/juli-rivero/need-for-speed-g25/archive/refs/heads/main.zip" download 
    class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden h-14 px-8 bg-primary text-background-dark text-lg font-bold leading-normal tracking-widest border-4 border-primary hover:bg-background-dark hover:text-primary transition-colors text-decoration-none">
     <span class="truncate">DOWNLOAD ZIP</span>
